# CMakeList.txt : CMake project for Effective-Modern-C++, include source and define
# project specific logic here.
#
cmake_minimum_required(VERSION 3.8)

include_directories("../../boost_1_69_0")

# Add source to this project's executable.
add_executable(item-1 "item-1.cpp")

# TODO: Add tests and install targets if needed.
